@@ -38,7 +38,6 @@ use Dist::Zilla::Plugin::PkgVersion;
 use Dist::Zilla::Plugin::PodCoverageTests;
 use Dist::Zilla::Plugin::PodSyntaxTests;
 use Dist::Zilla::Plugin::PromptIfStale;
-use Dist::Zilla::Plugin::PruneFiles;
 use Dist::Zilla::Plugin::ReadmeAnyFromPod;
 use Dist::Zilla::Plugin::SurgicalPodWeaver;
 use Dist::Zilla::Plugin::Test::CPAN::Changes;
@@ -75,7 +74,7 @@ has authority => (
     default => 'DROLSKY',
 );
 
-has prune_files => (
+has exclude_files => (
     is       => 'ro',
     isa      => 'ArrayRef[Str]',
     required => 1,
@@ -157,14 +156,14 @@ sub mvp_multivalue_args {
 sub _build_plugins {
     my $self = shift;
 
-    my @prune_filename;
-    my @prune_match;
-    for my $prune ( @{ $self->prune_files() } ) {
-        if ( $prune =~ m{^[\w\-\./]+$} ) {
-            push @prune_filename, $prune;
+    my %exclude_filename = ( 'README.md' => 1 );
+    my @exclude_match;
+    for my $exclude ( @{ $self->exclude_files() } ) {
+        if ( $exclude =~ m{^[\w\-\./]+$} ) {
+            $exclude_filename{$exclude} = 1;
         }
         else {
-            push @prune_match, $prune;
+            push @exclude_match, $exclude;
         }
     }
 
@@ -183,11 +182,18 @@ sub _build_plugins {
                 : ()
             },
         ],
-        [ GatherDir        => { exclude_filename => 'README.md' }, ],
-        [ 'Git::Check'     => { allow_dirty      => \@allow_dirty }, ],
-        [ 'Git::Commit'    => { allow_dirty      => \@allow_dirty }, ],
-        [ 'GitHub::Meta'   => { bugs             => 0 }, ],
-        [ 'GitHub::Update' => { metacpan         => 1 }, ],
+        [
+            GatherDir => {
+                exclude_filename => [ keys %exclude_filename ],
+                (
+                    @exclude_match ? ( exclude_match => \@exclude_match ) : ()
+                ),
+            },
+        ],
+        [ 'Git::Check'     => { allow_dirty => \@allow_dirty }, ],
+        [ 'Git::Commit'    => { allow_dirty => \@allow_dirty }, ],
+        [ 'GitHub::Meta'   => { bugs        => 0 }, ],
+        [ 'GitHub::Update' => { metacpan    => 1 }, ],
         [ MetaResources           => $self->_meta_resources(), ],
         [ 'MetaProvides::Package' => { meta_noindex => 1 }, ],
         [
@@ -195,12 +201,6 @@ sub _build_plugins {
                       format => '%-'
                     . $self->next_release_width()
                     . 'v %{yyyy-MM-dd}d'
-            },
-        ],
-        [
-            PruneFiles => {
-                ( @prune_filename ? ( filename => \@prune_filename ) : () ),
-                ( @prune_match    ? ( match    => \@prune_match )    : () ),
             },
         ],
         [
